--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -2179,7 +2179,10 @@ template {
   color: darkturquoise;
 }
 
-.pages-buttons, .classic-buttons, .browser-buttons, .filter-buttons{
+.pages-buttons,
+.classic-buttons,
+.browser-buttons,
+.filter-buttons {
   display: flex;
   flex-direction: column;
 }
@@ -2313,6 +2316,6 @@ template {
 }
 
 .heatmap-pic {
-  margin-top: -80px;
+  /* margin-top: -80px; */
   margin-bottom: -150px;
 }
